--- a/MapViewer/App.xaml
+++ b/MapViewer/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MapViewer"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml" x:ClassModifier="internal">
     <Application.Resources>
          
     </Application.Resources>
