--- a/MapViewer/App.xaml
+++ b/MapViewer/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="MapViewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MapViewer"
-             StartupUri="MainWindow.xaml" x:ClassModifier="internal">
+             x:ClassModifier="internal">
     <Application.Resources>
          
     </Application.Resources>
