--- a/MapViewer/MainWindow.xaml
+++ b/MapViewer/MainWindow.xaml
@@ -6,15 +6,32 @@
         xmlns:local="clr-namespace:MapViewer"
         xmlns:mapControl="clr-namespace:MapControl;assembly=MapControl.WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" x:ClassModifier="internal">
+        Title="MainWindow" Height="450" Width="800" x:ClassModifier="internal" d:DataContext="{d:DesignInstance local:MapViewModel}">
+    <Window.Resources>
+    </Window.Resources>
     <Grid>
-        <mapControl:Map x:Name="Map" MaxZoomLevel="22" ZoomLevel="11" Center="55.0,82.9">
+        <mapControl:Map MaxZoomLevel="22" ZoomLevel="11" Center="55.0,82.9">
             <mapControl:Map.MapProjection>
                 <mapControl:WebMercatorProjection/>
             </mapControl:Map.MapProjection>
             <mapControl:Map.MapLayer>
                 <mapControl:WmsImageLayer ServiceUri="http://ows.terrestris.de/osm/service" Layers="OSM-WMS"/>
             </mapControl:Map.MapLayer>
+            
+            <mapControl:MapItemsControl ItemsSource="{Binding Stations}">
+                <mapControl:MapItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <mapControl:Pushpin Location="{Binding Location}"/>
+                    </DataTemplate>
+                </mapControl:MapItemsControl.ItemTemplate>
+                <mapControl:MapItemsControl.ItemContainerStyle>
+                    <Style TargetType="mapControl:MapItem">
+                        <Setter Property="AutoCollapse" Value="True"/>
+                        <Setter Property="Location" Value="{Binding Location}"/>
+                        <Setter Property="VerticalAlignment" Value="Bottom"/>
+                    </Style>
+                </mapControl:MapItemsControl.ItemContainerStyle>
+            </mapControl:MapItemsControl>
         </mapControl:Map>
     </Grid>
 </Window>
