--- a/MapViewer/Presentation/FilterEntry.xaml
+++ b/MapViewer/Presentation/FilterEntry.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MapViewer.FilterEntry"
+﻿<UserControl x:Class="MapViewer.Presentation.FilterEntry"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
