--- a/MapViewer/Presentation/FilterWindow.xaml
+++ b/MapViewer/Presentation/FilterWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MapViewer.FilterWindow"
+﻿<Window x:Class="MapViewer.Presentation.FilterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
