--- a/MapViewer/Presentation/MainWindow.xaml
+++ b/MapViewer/Presentation/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MapViewer.MainWindow"
+﻿<Window x:Class="MapViewer.Presentation.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:mapControl="clr-namespace:MapControl;assembly=MapControl.WPF"
         mc:Ignorable="d"
         Title="Map viewer" Height="450" Width="800" x:ClassModifier="internal"
-        d:DataContext="{d:DesignInstance local:MapViewModel}">
+        d:DataContext="{d:DesignInstance local:Presentation.MapViewModel}">
     <Window.Resources>
     </Window.Resources>
     <Grid>
